--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Live W&H</title>
 	</head>
-	<body class="teal lighten-2 white-text lighten-5 container">
+	<body>
 		<main>
 			<span>Inner width:</span>
 			<span id="innerWidth">0</span>
