--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 	<!-- Applying internal CSS -->
 	<style>
 		body {
-			color: #173f5f;
-			background-color: #3caea3;
+			color: #d1eff6;
+			background-color: #2e5053;
 			font-family: Arial, Helvetica, sans-serif;
 			font-size: 5vw;
 		}
